objects/Attendance_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Admin_Notifications_cons__c</fullName>
        <label>Admin Notifications (Consecutive)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Notify Administration</fullName>
                </value>
                <value>
                    <fullName>Administration Notified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admin_Notifications_cuml__c</fullName>
        <label>Admin Notifications (Cumulative)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Notify Administration</fullName>
                </value>
                <value>
                    <fullName>Administration Notified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consecutive__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Consecutive</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cumulative</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Student + Notification</description>
        <externalId>true</externalId>
        <label>Key</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Minutes_Lost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minutes Lost</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notification</label>
        <referenceTo>Notification__c</referenceTo>
        <relationshipLabel>Attendance Tracking</relationshipLabel>
        <relationshipName>Attendance_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Old_Consecutive_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field will hold the old consecutive value which will allow us to rollback the consecutive value in the case of a mistake and an update.</description>
        <label>Old Consecutive Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parental_Notification_Required__c</fullName>
        <label>Parental Notification Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Send Notification</fullName>
                </value>
                <value>
                    <fullName>Notification Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Status</label>
        <referenceTo>Picklist_Value__c</referenceTo>
        <relationshipLabel>Attendance Tracking</relationshipLabel>
        <relationshipName>Attendance_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requires_Processing__c</fullName>
        <description>We can use this to ensure we don&apos;t process unnecessary records in Attendance Tracking</description>
        <formula>IF (
AND (
ISBLANK(Text(Admin_Notifications_cons__c)),
ISBLANK(Text(Admin_Notifications_cuml__c)),
Consecutive__c +  Cumulative__c +  Minutes_Lost__c &gt; 0
),
&quot;Yes&quot;,
&quot;No&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requires Processing?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Name__c</fullName>
        <formula>Picklist_Value__r.Setup__r.School__r.Name</formula>
        <label>School Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Attendance Tracking</relationshipLabel>
        <relationshipName>Attendance_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Attendance Tracking</label>
    <nameField>
        <displayFormat>ATRK-{0000}</displayFormat>
        <label>Attendance Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendance Tracking</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>